--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 .DS_Store
+node_modules
+public/*.js
+bower_components
+__pycache__
+*.pyc
+bin
+obj
+*.db
+*.sqlite3
 .vscode
+dist
+database.json
+entries.json
